chore: get doctors for a specific department
