# src/main/java/app/m/advise/model/Doctor.java
@@ -1,19 +1,18 @@
 package app.m.advise.model;
 
 import static app.m.advise.model.Role.DOCTOR;
-import static jakarta.persistence.CascadeType.ALL;
-import static jakarta.persistence.FetchType.LAZY;
 
 import jakarta.persistence.Entity;
-import jakarta.persistence.ManyToOne;
 import jakarta.persistence.PrimaryKeyJoinColumn;
 import jakarta.persistence.Table;
 import java.time.Instant;
+import lombok.AllArgsConstructor;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
+import lombok.experimental.SuperBuilder;
 
 @PrimaryKeyJoinColumn(name = "id")
 @Entity
@@ -21,11 +20,12 @@ import lombok.ToString;
 @NoArgsConstructor
 @Getter
 @Setter
+@SuperBuilder
+@AllArgsConstructor
 @EqualsAndHashCode(callSuper = false)
 @ToString
 public class Doctor extends User {
-  @ManyToOne(cascade = ALL, fetch = LAZY)
-  private Hospital hospital;
+  private String departmentId;
 
   private String registryNumber;
 
@@ -37,11 +37,11 @@ public class Doctor extends User {
       Instant birthDate,
       String authenticatedId,
       String photoId,
-      Hospital hospital,
+      String department,
       String nic,
       String registryNumber) {
     super(id, firstName, lastName, email, birthDate, authenticatedId, photoId, nic, DOCTOR);
-    this.hospital = hospital;
+    this.departmentId = department;
     this.registryNumber = registryNumber;
   }
 }
